에부룸넝렙ㄹ

--- a/index.html
+++ b/index.html
@@ -3,19 +3,23 @@
 
     <head>
         <link type="text/css" href="style.css" rel="stylesheet">
+
+        <script>
+            //javascriptarea
+        </script>
     </head>
 
     <body>
         <span class="title">Todo - List</span>
-        <div class="makeNew">+ 새로 만들기</div>
+        <div id="newBtn" class="makeNew">+ 새로 만들기</div>
 
         <div class="box">
             <div class="boxTitle">
-                a
+                Title
             </div>
             <hr>
             <div class="boxContent">
-                a
+                Content
             </div>
         </div>
     </body>
